--- a/Reviews-page/BC.Games/index.html
+++ b/Reviews-page/BC.Games/index.html
@@ -325,7 +325,7 @@
               </div>
               <div class="casino-bonus">
                 <p class="casino-bonus-title">Casino bonus</p>
-                <p>Welcome bonuses up to 100% + 400 FS</p>
+                <p>Welcome bonuses 150% up to 1000$ + 100 FS</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
@@ -351,7 +351,7 @@
               </div>
               <div class="casino-bonus">
                 <p class="casino-bonus-title">ESports bonus</p>
-                <p>Welcome bonuses up to 100% + 20 FB</p>
+                <p>Welcome bonuses 80% up to 1000$ + 5 FB</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
@@ -377,7 +377,7 @@
               </div>
               <div class="casino-bonus">
                 <p class="casino-bonus-title">Sports bonus</p>
-                <p>Welcome bonuses up to 100% + 20 FB</p>
+                <p>Welcome bonuses 80% up to 1000$ + 5 FB</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
@@ -417,180 +417,146 @@
             alt="bc.game site"
           />
         </li>
-        <h2>BC.Game Welcome Bonus for Casino and Sports Betting</h2>
-
+        <h2>BC.Game Welcome Bonus – Casino & Sports Betting Offers</h2>
         <p>
-          BC.Game offers an exciting welcome bonus package for both casino and
-          sports betting enthusiasts. Whether you’re into slots or sports, their
-          comprehensive bonus structure ensures a rewarding experience for new
-          users. Let’s dive into the details of BC.Game's welcome bonuses and
-          how they work for both casino and sports betting fans.
+          BC.Game rewards new users with two welcome packages: a sports deposit
+          bonus for sports betting and a casino deposit bonus for casino games.
+          Both offers include matched deposits plus free bets or free spins,
+          along with clear wagering requirements and eligibility rules.
         </p>
 
-        <h2>Casino Welcome Bonus</h2>
-        <p><span>Total Bonus:</span> 100% Bonus + 100 Free Spins</p>
+        <h3>
+          Sports Betting Welcome Bonus – Up to 80% + 5 Free Bets (Per Deposit)
+        </h3>
+        <ul>
+          <li>1st Deposit: 80% bonus up to $1,000 + 5 Free Bets</li>
+          <li>2nd Deposit: 60% bonus up to $1,000 + 5 Free Bets</li>
+          <li>3rd Deposit: 80% bonus up to $1,000 + 5 Free Bets</li>
+          <li>4th Deposit: 60% bonus up to $1,000 + 5 Free Bets</li>
+        </ul>
 
-        <h3>First 4 Deposits Overview</h3>
-        <p>
-          BC.Game rewards new players across their first four deposits,
-          providing bonus funds and free spins to amplify the casino gaming
-          experience.
-        </p>
-
-        <h3>Bonus Breakdown</h3>
+        <h4>Key Terms for Sports Bonus</h4>
         <ul>
           <li>
-            <strong>1st Deposit Bonus:</strong> 120% match bonus up to $500 +
-            100 Free Spins
+            Eligibility: New users only; registration + verification
+            (email/phone; identity verification may be required).
           </li>
           <li>
-            <strong>2nd Deposit Bonus:</strong> 100% match bonus up to $300 +
-            100 Free Spins
+            Activation: Credited automatically when choosing the Sports Bonus at
+            deposit.
+          </li>
+          <li>Minimum Deposit: $5 (1st & 2nd), $15 (3rd & 4th).</li>
+          <li>Wagering Requirement: 20x of (deposit + bonus).</li>
+          <li>Bet Type: Only accumulator bets (parlays) with 3+ selections.</li>
+          <li>Odds: Each selection must be at least 1.5 (decimal).</li>
+          <li>Time Limit: Use bonus and complete wagering within 7 days.</li>
+          <li>
+            Contribution: Only sports bets count; they contribute 50% toward
+            wagering.
+          </li>
+          <li>Max Bet with Bonus: $1,000 per bet.</li>
+          <li>Free Bet Winnings Cap: $50 maximum; excess is forfeited.</li>
+          <li>Max Unlockable from Bonus: Up to 200% of the bonus amount.</li>
+        </ul>
+
+        <h3>
+          Casino Welcome Bonus – Up to 150% + 100 Free Spins (Per Deposit)
+        </h3>
+        <ul>
+          <li>1st Deposit: 120% bonus up to $1,000 + 100 Free Spins</li>
+          <li>2nd Deposit: 100% bonus up to $1,000 + 100 Free Spins</li>
+          <li>3rd Deposit: 150% bonus up to $1,000 + 100 Free Spins</li>
+          <li>4th Deposit: 100% bonus up to $1,000 + 100 Free Spins</li>
+        </ul>
+
+        <h4>Key Terms for Casino Bonus</h4>
+        <ul>
+          <li>
+            Eligibility: New users only; registration + verification
+            (email/phone; identity verification may be required).
           </li>
           <li>
-            <strong>3rd Deposit Bonus:</strong> 150% match bonus up to $500 +
-            100 Free Spins
+            Activation: Bonus funds and Free Spins are credited automatically.
+          </li>
+          <li>Minimum Deposit: $5 (1st & 2nd), $15 (3rd & 4th).</li>
+          <li>Bonus Expiration: Complete bonus wagering within 30 days.</li>
+          <li>
+            Free Spins: Must be claimed within 24 hours of crediting and used
+            within 24 hours.
           </li>
           <li>
-            <strong>4th Deposit Bonus:</strong> 100% match bonus up to $300 +
-            100 Free Spins
+            Wagering Requirements:
+            <ul>
+              <li>Deposit bonus: 20x of (deposit + bonus).</li>
+              <li>Free Spin winnings: 40x before withdrawal.</li>
+            </ul>
+          </li>
+          <li>
+            Game Contribution to Wagering:
+            <ul>
+              <li>Slots (third-party): 50%–100% (varies by game).</li>
+              <li>BC.Game Original Games: 5%.</li>
+              <li>Table Games & Live Casino: 0% (do not contribute).</li>
+            </ul>
+          </li>
+          <li>
+            Free Spin Winnings Cap: Max withdrawal from FS winnings is $5.
+          </li>
+          <li>Max Unlockable from Bonus: Up to 200% of the bonus amount.</li>
+        </ul>
+
+        <h3>General Rules & Responsible Gambling</h3>
+        <ul>
+          <li>
+            One bonus per user, household, IP address, and device; bonuses are
+            non-transferable.
+          </li>
+          <li>
+            Verification & Withdrawals: BC.Game may require identity and address
+            verification before processing withdrawals.
+          </li>
+          <li>
+            Forfeiture: Unmet wagering requirements or expired timelines lead to
+            loss of bonus and related winnings.
+          </li>
+          <li>
+            Cancellations: Users may cancel an active bonus from the
+            Bonus/Rollover page; remaining deposit balance adjusts based on
+            bonus balance spent.
+          </li>
+          <li>
+            Abuse & Fraud: Accounts may be reviewed; abuse can result in bonus
+            removal, winnings forfeiture, and/or suspension.
+          </li>
+          <li>
+            Modifications: BC.Game can modify, suspend, or terminate promotions;
+            existing credited bonuses remain under original terms.
+          </li>
+          <li>
+            Practice responsible gambling: set limits, only wager what you can
+            afford, and take breaks when needed.
           </li>
         </ul>
 
-        <h3>Eligibility</h3>
-        <p>
-          Available exclusively to new users who have never deposited on
-          BC.Game. Verification with a valid email or phone number is required.
-        </p>
-
-        <h3>Wagering Requirements</h3>
+        <h3>Quick Tips to Maximize Value</h3>
         <ul>
           <li>
-            <strong>Bonus Funds:</strong> Must be wagered 35 times before
-            withdrawal.
+            Sports betting: Build accumulator bets with 3+ selections at odds ≥
+            1.5 to ensure wagers qualify.
           </li>
           <li>
-            <strong>Free Spins Winnings:</strong> Winnings from free spins are
-            subject to a 35x wagering requirement.
+            Casino play: Prefer slots that contribute 50%–100% toward wagering;
+            avoid table games and live casino for wagering progress.
+          </li>
+          <li>
+            Track deadlines: 7 days (sports), 30 days (casino), and 24 hours
+            (free spins claim/use).
+          </li>
+          <li>
+            Mind limits: sports max bet $1,000 with bonus; caps on free bet and
+            free spin winnings; 200% max unlock from bonus.
           </li>
         </ul>
-
-        <h3>Game Contributions</h3>
-        <ul>
-          <li>
-            <strong>Slot Games:</strong> Contribute 100% towards wagering
-            requirements.
-          </li>
-          <li>
-            <strong>Table and Live Casino:</strong> Contribute less towards the
-            requirement, check specific game contributions.
-          </li>
-        </ul>
-
-        <p>
-          <strong>Minimum Deposit:</strong> $10 for the first bonus, $15 for the
-          2nd, 3rd, and 4th bonuses.
-        </p>
-        <p>
-          <strong>Maximum Bet Limit:</strong> $5 per spin or game round when
-          using bonus funds.
-        </p>
-
-        <h2>Sports Welcome Bonus</h2>
-        <p><span>Total Bonus:</span> 100% Bonus + 5 Free Bets</p>
-
-        <h3>First 4 Deposits Overview</h3>
-        <p>
-          BC.Game sports bettors can also enjoy bonuses on their first four
-          deposits, tailored to improve their sports betting experience.
-        </p>
-
-        <h3>Bonus Breakdown</h3>
-        <ul>
-          <li>
-            <strong>1st Deposit Bonus:</strong> 120% match bonus up to $500 + 5
-            Free Bets
-          </li>
-          <li>
-            <strong>2nd Deposit Bonus:</strong> 100% match bonus up to $300 + 5
-            Free Bets
-          </li>
-          <li>
-            <strong>3rd Deposit Bonus:</strong> 150% match bonus up to $500 + 5
-            Free Bets
-          </li>
-          <li>
-            <strong>4th Deposit Bonus:</strong> 100% match bonus up to $300 + 5
-            Free Bets
-          </li>
-        </ul>
-
-        <h3>Eligibility</h3>
-        <p>
-          This offer is available exclusively to new users who haven’t made a
-          deposit before.
-        </p>
-
-        <h3>Wagering Requirements</h3>
-        <ul>
-          <li>
-            <strong>Bonus Funds:</strong> The bonus must be wagered 10 times
-            before withdrawal.
-          </li>
-          <li>
-            <strong>Bet Type:</strong> Must place accumulator bets with at least
-            3 selections and odds of 1.5 or higher.
-          </li>
-        </ul>
-
-        <p>
-          <strong>Minimum Deposit:</strong> $10 for the first deposit, $15 for
-          the remaining bonuses.
-        </p>
-        <p>
-          <strong>Maximum Bet Limit:</strong> $1,000 per bet while wagering with
-          bonus funds.
-        </p>
-
-        <h2>General Terms for Both Bonuses</h2>
-        <ul>
-          <li>
-            <strong>Activation:</strong> Bonuses are automatically activated
-            with each qualifying deposit.
-          </li>
-          <li>
-            <strong>Expiration:</strong> Bonus funds and winnings expire if not
-            used within 7 days.
-          </li>
-          <li>
-            <strong>User-Initiated Cancellation:</strong> Players can cancel
-            their active bonus at any time, forfeiting the bonus and associated
-            winnings.
-          </li>
-          <li>
-            <strong>Fraud Prevention:</strong> BC.Game actively monitors for
-            fraudulent activity, and any violation may result in forfeiture of
-            bonuses and winnings.
-          </li>
-        </ul>
-
-        <h2>Reload Bonuses</h2>
-
-        <p>
-          Reload bonuses are available to ensure that existing players continue
-          to receive value with every subsequent deposit. These bonuses are
-          especially beneficial for regular players who frequently deposit and
-          play on the platform, ensuring that they are consistently rewarded for
-          their ongoing participation.
-        </p>
-
-        <p>
-          With such a diverse range of bonus options, BC.Game Casino stands out
-          as a top choice for players looking to get the most out of their
-          online gaming experience. Whether you're a new player or a returning
-          one, these bonuses provide ample opportunities to extend your gameplay
-          and boost your potential winnings.
-        </p>
       </div>
 
       <div id="Overview" class="tabcontent-info">
