--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -1817,7 +1817,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome bonuses up to 100% + 400 FS</p>
+                <p class="info">Welcome bonuses 150% up to 1000$ + 100 FS</p>
               </div>
 
               <div class="buttons-bonus">
