--- a/Esports/index.html
+++ b/Esports/index.html
@@ -711,7 +711,7 @@
                   </div>
 
                   <div class="content-top">
-                    <p>Welcome Bonus up to 100% + 20 free bets</p>
+                    <p>Welcome bonuses 80% up to 1000$ + 5 FB</p>
                   </div>
 
                   <div class="top-bonus">
@@ -1450,7 +1450,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome bonuses up to 100% + 20 FB</p>
+                <p class="info">Welcome bonuses 80% up to 1000$ + 5 FB</p>
               </div>
 
               <div class="buttons-bonus">
