--- a/Sports/index.html
+++ b/Sports/index.html
@@ -1606,7 +1606,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome bonuses up to 100% + 20 FB</p>
+                <p class="info">Welcome bonuses 80% up to 1000$ + 5 FB</p>
               </div>
 
               <div class="buttons-bonus">
