--- a/index.html
+++ b/index.html
@@ -349,6 +349,34 @@
                   </a>
                 </div>
 
+                <!--duelbits slots 500 fs-->
+                <div class="news-item">
+                  <a
+                    href="/News-Articles/Duelbits_Rookie_Rush–Up-to-500-Free-Spins-on-Slots/"
+                  >
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/duelbits-slots-500fs-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        Duelbits Rookie Rush – Up to 500 Free Spins on Slots
+                        <br />
+                        <strong> Offer expires on September 30th 2025 </strong>
+                      </h2>
+
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
                 <!-- avia roobet-->
                 <div class="news-item">
                   <a
