--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -609,6 +609,36 @@
                     </div>
                   </a>
                 </div>
+
+                <!--5deposits 500 euro-->
+                <div class="news-item">
+                  <a
+                    href="/News-Articles/GG.Bet-5-Deposits-Bonus-up-to-500-Euro/"
+                  >
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/ggbet-500-wager-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        GG.Bet Deposit Quest Bonus – 5 Deposits Average up to
+                        €500 <br />
+
+                        <p><strong>Offer ongoing</strong></p>
+                      </h2>
+
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
                 <!--duelbits slots 500 fs-->
                 <div class="news-item">
                   <a
