--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -610,6 +610,33 @@
                   </a>
                 </div>
 
+                <!--ggbet 7 deposits 200% 100fs-->
+                <div class="news-item">
+                  <a href="/News-Articles/GG.Bet-Marathon-Deposit-Bonus/">
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/ggbet-marathon-promo-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        GG.Bet Marathon Bonus – Deposit €1,000 in 7 days, Get
+                        200% Bonus + 100 Free Spins on Joker Stoker <br />
+
+                        <strong>Offer ongoing</strong>
+                      </h2>
+
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
                 <!--5deposits 500 euro-->
                 <div class="news-item">
                   <a
@@ -630,6 +657,33 @@
                         €500 <br />
 
                         <p><strong>Offer ongoing</strong></p>
+                      </h2>
+
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
+                <!--ggbet 3 deposits 150% 50fs-->
+                <div class="news-item">
+                  <a href="/News-Articles/GG.Bet-Sprint-Deposit-Bonus/">
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/ggbet-Total-deposits-for-3-days-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        GG.Bet Sprint Bonus – Deposit €300 in 3 days, Get 150%
+                        Bonus + 50 Free Spins on Gates of Olympus <br />
+
+                        <strong>Offer ongoing</strong>
                       </h2>
 
                       <div class="news-button">
