--- a/Reviews-page/GG.Bet/index.html
+++ b/Reviews-page/GG.Bet/index.html
@@ -566,15 +566,15 @@
         </div>
         <ul>
           <li>
-            <strong>Deposit of €7 to €20</strong>: 100% deposit bonus + 35 free
+            <strong>Deposit of €5 to €15</strong>: 100% deposit bonus + 35 free
             spins on <em>Wisdom of Athena</em>.
           </li>
           <li>
-            <strong>Deposit of €20 to €70</strong>: 130% deposit bonus + 45 free
+            <strong>Deposit of €15to €50</strong>: 130% deposit bonus + 45 free
             spins on <em>Book Of Demi Gods 4</em>.
           </li>
           <li>
-            <strong>Deposit of €70 and above</strong>: 150% deposit bonus + 65
+            <strong>Deposit of €50 and above</strong>: 150% deposit bonus + 65
             free spins on <em>Big Bass Splash</em>.
           </li>
         </ul>
@@ -590,15 +590,15 @@
         <ul>
           <li>Up to 500 EUR and 60 free spins</li>
           <li>
-            <strong>Option 1:</strong> 1 deposit of $13 - 125% bonus + 40 FS
+            <strong>Option 1:</strong> 1 deposit from €10 - 125% bonus + 40 FS
             (3x3 Hold the Spin, Gamzix) - Max bonus: $250
           </li>
           <li>
-            <strong>Option 2:</strong> 3 deposits of $13 - Average deposit
+            <strong>Option 2:</strong> 3 deposits from €10 - Average deposit
             amount bonus + 50 FS (Majestic King, Spinomenal) - Max bonus: $400
           </li>
           <li>
-            <strong>Option 3:</strong> 5 deposits of $13 - 100% bonus + 60 FS
+            <strong>Option 3:</strong> 5 deposits from €10 - 100% bonus + 60 FS
             (Sugar Rush 1000, PragmaticPlay) - Max bonus: $700
           </li>
         </ul>
@@ -921,15 +921,15 @@
             <p>Depending on your deposit amounts, GG.Bet offers:</p>
             <ul>
               <li>
-                <strong>Deposit of €7 to €20:</strong> 100% deposit bonus + 35
+                <strong>Deposit of €5 to €15:</strong> 100% deposit bonus + 35
                 free spins on <em>Wisdom of Athena</em>.
               </li>
               <li>
-                <strong>Deposit of €20 to €70:</strong> 130% deposit bonus + 45
+                <strong>Deposit of €15 to €50:</strong> 130% deposit bonus + 45
                 free spins on <em>Book Of Demi Gods 4</em>.
               </li>
               <li>
-                <strong>Deposit of €70 and above:</strong> 150% deposit bonus +
+                <strong>Deposit of €50 and above:</strong> 150% deposit bonus +
                 65 free spins on <em>Big Bass Splash</em>.
               </li>
             </ul>
@@ -953,16 +953,16 @@
             <ul>
               <li>Up to 500 EUR and 60 free spins</li>
               <li>
-                <strong>Option 1:</strong> 1 deposit of $13 - 125% bonus + 40 FS
-                (3x3 Hold the Spin, Gamzix) - Max bonus: $250
+                <strong>Option 1:</strong> 1 deposit from €10 - 125% bonus + 40
+                FS (3x3 Hold the Spin, Gamzix) - Max bonus: $250
               </li>
               <li>
-                <strong>Option 2:</strong> 3 deposits of $13 - Average deposit
+                <strong>Option 2:</strong> 3 deposits from €10 - Average deposit
                 amount bonus + 50 FS (Majestic King, Spinomenal) - Max bonus:
                 $400
               </li>
               <li>
-                <strong>Option 3:</strong> 5 deposits of $13 - 100% bonus + 60
+                <strong>Option 3:</strong> 5 deposits from €10 - 100% bonus + 60
                 FS (Sugar Rush 1000, PragmaticPlay) - Max bonus: $700
               </li>
             </ul>
