--- a/index.html
+++ b/index.html
@@ -320,27 +320,46 @@
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
 
-                <!-- roobet september 2025-->
+                <!-- mission uncrossable -->
+                <div class="news-item">
+                  <a href="/News-Articles/Roobet-Mission-Uncrossable/">
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/mission-unscrollable.webp"
+                        width="300"
+                        height="200"
+                        alt="Mission Uncrossable Banner"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>Only at Roobet - <span>Mission Uncrossable</span></h2>
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
+                <!-- roobet holoween 2025-->
                 <div class="news-item">
                   <a
-                    href="/News-Articles/September_at_Roobet_Spin_Bet_Win_Repeat/"
+                    href="/News-Articles/Roobet-Casino-Spooky-Spins-and-Huge-Halloween-Wins/"
                   >
                     <div class="news-banner">
                       <img
-                        src="/img/news-banners/september_at_roobet_2025_news.webp"
+                        src="/img/news-banners/roobet-2025-Halloween-news.webp"
                         width="300"
                         height="200"
-                        alt="roobet september 2025"
+                        alt="roobet holloween 2025"
                         loading="lazy"
                       />
                     </div>
                     <div class="news-content">
                       <h2>
-                        September at Roobet: Spin, Bet, Win, Repeat <br />
-
-                        <strong>
-                          Offer expires on 30th of September 2025</strong
-                        >
+                        Halloween Casino Promotions | Roobet Crypto Casino
+                        Tournaments & $2M Slot Drops <br />
+                        <strong> Offer expires on 31st of October2025</strong>
                       </h2>
                       <div class="news-button">
                         <button>Read More</button>
@@ -423,34 +442,6 @@
                         Bonus + 50 Free Spins on Gates of Olympus <br />
 
                         <strong>Offer ongoing</strong>
-                      </h2>
-
-                      <div class="news-button">
-                        <button>Read More</button>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-
-                <!--duelbits slots 500 fs-->
-                <div class="news-item">
-                  <a
-                    href="/News-Articles/Duelbits_Rookie_Rush–Up-to-500-Free-Spins-on-Slots/"
-                  >
-                    <div class="news-banner">
-                      <img
-                        src="/img/news-banners/duelbits-slots-500fs-news.webp"
-                        width="300"
-                        height="200"
-                        alt="ggbet-esl-bangkok-news"
-                        loading="lazy"
-                      />
-                    </div>
-                    <div class="news-content">
-                      <h2>
-                        Duelbits Rookie Rush – Up to 500 Free Spins on Slots
-                        <br />
-                        <strong> Offer expires on September 30th 2025 </strong>
                       </h2>
 
                       <div class="news-button">
