--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -586,6 +586,53 @@
             <div class="news-wrapper">
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
+                <!-- mission uncrossable -->
+                <div class="news-item">
+                  <a href="/News-Articles/Roobet-Mission-Uncrossable/">
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/mission-unscrollable.webp"
+                        width="300"
+                        height="200"
+                        alt="Mission Uncrossable Banner"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>Only at Roobet - <span>Mission Uncrossable</span></h2>
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
+                <!-- roobet holoween 2025-->
+                <div class="news-item">
+                  <a
+                    href="/News-Articles/Roobet-Casino-Spooky-Spins-and-Huge-Halloween-Wins/"
+                  >
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/roobet-2025-Halloween-news.webp"
+                        width="300"
+                        height="200"
+                        alt="roobet holloween 2025"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        Halloween Casino Promotions | Roobet Crypto Casino
+                        Tournaments & $2M Slot Drops <br />
+                        <strong> Offer expires on 31st of October2025</strong>
+                      </h2>
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
 
                 <!-- avia roobet-->
                 <div class="news-item">
