--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -586,6 +586,7 @@
             <div class="news-wrapper">
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
+
                 <!-- mission uncrossable -->
                 <div class="news-item">
                   <a href="/News-Articles/Roobet-Mission-Uncrossable/">
@@ -627,6 +628,34 @@
                         Tournaments & $2M Slot Drops <br />
                         <strong> Offer expires on 31st of October2025</strong>
                       </h2>
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
+                <!--duelbits 2025 500 free spins-->
+                <div class="news-item">
+                  <a
+                    href="/News-Articles/Duelbits-Rookie-Rush-Welcome-Offer-Up-to-500-Free-Spins/"
+                  >
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/duelbits-500spins-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        Duelbits Rookie Rush Welcome Offer – Claim Up to 500
+                        Free Spins! <br />
+                        <strong> Offer expires on the 31st of October! </strong>
+                      </h2>
+
                       <div class="news-button">
                         <button>Read More</button>
                       </div>
