--- a/index.html
+++ b/index.html
@@ -368,6 +368,34 @@
                   </a>
                 </div>
 
+                <!--duelbits 2025 500 free spins-->
+                <div class="news-item">
+                  <a
+                    href="/News-Articles/Duelbits-Rookie-Rush-Welcome-Offer-Up-to-500-Free-Spins/"
+                  >
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/duelbits-500spins-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        Duelbits Rookie Rush Welcome Offer – Claim Up to 500
+                        Free Spins! <br />
+                        <strong> Offer expires on the 31st of October! </strong>
+                      </h2>
+
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
                 <!--ggbet 7 deposits 200% 100fs-->
                 <div class="news-item">
                   <a href="/News-Articles/GG.Bet-Marathon-Deposit-Bonus/">
